# url-md

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  install.ps1  install.sh
.github/workflows/: release.yml
crates/url-md-adapters/src/: generic.rs  weixin.rs
crates/url-md-core/: Cargo.toml
crates/url-md-core/src/: fetcher.rs  lib.rs  parser.rs
crates/url-md/src/: main.rs
crates/url-md/src/cmd/: md.rs
src/url-md/: Cargo.toml
src/url-md-adapters/: Cargo.toml
src/url-md-adapters/src/: lib.rs  weixin.rs
src/url-md-core/: Cargo.toml
src/url-md-core/src/: adapter.rs  downloader.rs  error.rs  fetcher.rs  pipeline.rs  router.rs  text.rs
src/url-md-spike/: Cargo.toml
src/url-md-spike/src/: main.rs
src/url-md/src/: main.rs
src/url-md/src/cmd/: md.rs  mod.rs  serve.rs
