[package]
name = "url-md-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip"] }
scraper = "0.20"
html2md = "0.2"
url = "2"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
once_cell = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
