[package]
name = "url-md"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "url-md"
path = "src/main.rs"

[dependencies]
url-md-core = { path = "../url-md-core" }
url-md-adapters = { path = "../url-md-adapters" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
url = "2"
