[package]
name = "url-md"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "url-md"
path = "src/main.rs"

[dependencies]
url-md-core = { path = "../url-md-core" }
url-md-adapters = { path = "../url-md-adapters" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "io-std", "io-util"] }
anyhow = "1"
time = { version = "0.3", features = ["formatting"] }
url = "2"
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
